[package]
name = "urecs-data-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
bpaf = { version = "0.9.20", features = ["derive", "autocomplete", "bright-color"] }
quick-xml = { version = "0.39", features = ["serialize"] }
subenum = "1.1.2"
reqwest = { version = "0.13", features = ["blocking", "json"] }
anyhow = "1.0.98"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
visa-rs = { version = "0.6.2", optional = true }
pico-sdk = { git = "https://github.com/percyjw-2/pico-sdk.git", rev = "a864a90"}
log = "0.4.28"
simple_logger = "5.1.0"

[features]
visa = ["dep:visa-rs"]
